Implementado o PUT para a tabela pessoas.
